Tweak visibility of logo h1 instead of fixing nav

--- a/css/style.css
+++ b/css/style.css
@@ -1796,6 +1796,11 @@ header {
     display: none;
     visibility: hidden; } }
 
+@media screen and (min-width: 920px) {
+  .logo h1 {
+    display: block;
+    visibility: visible; } }
+
 @-webkit-viewport {
   width: device-width; }
 
